# OSE

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  OSE.sln  README.md  premake5.lua
OSE/: CMakeLists.txt  Makefile  OSE.vcxproj  OSE.vcxproj.filters  premake5.lua
OSE/include/: OSE.hpp
OSE/include/OSE/: Core.hpp  DebugData.hpp  Engine.hpp  Logger.hpp  Window.hpp
OSE/include/OSE/Blueprints/: Actor.hpp  Camera.hpp  Convex.hpp  Entity.hpp  Layer.hpp  LightSource.hpp  Material.hpp  Scene.hpp  StaticMesh.hpp  Texture.hpp
OSE/include/OSE/Events/: EngineEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
OSE/include/OSE/Math/: Matrix.hpp  Multivector.hpp  Random.hpp  Rotor.hpp  Transform.hpp  Vecmath.hpp  Vector.hpp
OSE/include/OSE/Physics/: RigidBody.hpp
OSE/include/OSE/Systems/: EventSystem.hpp  PhysicsSystem.hpp  Renderer.hpp
OSE/lib/: CMakeLists.txt
OSE/resources/shaders/: mainShader.frag
OSE/src/: OSE.h
OSE/src/OSE/: Core.h  DebugData.cpp  DebugData.h  Engine.cpp  Engine.h  Logger.cpp  Logger.h  Window.h
OSE/src/OSE/Blueprints/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  Convex.cpp  Convex.h  Entity.cpp  Entity.h  Layer.cpp  Layer.h  LightSource.h  Material.cpp  Material.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  Transform.h
OSE/src/OSE/Events/: EngineEvent.cpp  EngineEvent.h  Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
OSE/src/OSE/Math/: Matrix.h  Multivector.cpp  Multivector.h  Random.h  Rotor.cpp  Rotor.h  Transform.cpp  Transform.h  Vecmath.cpp  Vecmath.h  Vector.cpp  Vector.h
OSE/src/OSE/Physics/: RigidBody.cpp  RigidBody.h
OSE/src/OSE/Systems/: EventSystem.cpp  EventSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  Renderer.cpp  Renderer.h
OSE/src/lib/P7/: p7-shared.lib
Sandbox/: CMakeLists.txt  Makefile  Sandbox.vcxproj  Sandbox.vcxproj.filters  premake5.lua
Sandbox/src/: Sandbox.cpp
assets/: crate.osem
assets/OSE/shaders/: mainShader.geom  mainShader.vert  ruvashaShader.frag  shikoShader.frag
bin-int/Debug-x64/OSE/: vc141.idb
bin-int/Debug-x64/OSE/OSE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OSE.lastbuildstate  OSE.write.1u.tlog  link.10164.delete.1.tlog  link.10504.delete.1.tlog  link.10736.delete.1.tlog  link.10896.delete.1.tlog  link.11416.delete.1.tlog  link.11448.delete.1.tlog  link.11536.delete.1.tlog  link.1200.delete.1.tlog  link.12012.delete.1.tlog  link.12156.delete.1.tlog  link.12240.delete.1.tlog  link.12256.delete.1.tlog  link.12308.delete.1.tlog  link.12368.delete.1.tlog  link.12412.delete.1.tlog  link.12500.delete.1.tlog  link.12504.delete.1.tlog  link.12916.delete.1.tlog  link.12940.delete.1.tlog  link.13100.delete.1.tlog  link.13188.delete.1.tlog  link.13308.delete.1.tlog  link.13732.delete.1.tlog  link.13840.delete.1.tlog  link.13908.delete.1.tlog  link.14076.delete.1.tlog  link.14168.delete.1.tlog  link.148.delete.1.tlog  link.15416.delete.1.tlog  link.15476.delete.1.tlog  link.16032.delete.1.tlog  link.16956.delete.1.tlog  link.16976.delete.1.tlog  link.17000.delete.1.tlog  link.17332.delete.1.tlog  (+44 more)
bin-int/Debug-x64/Sandbox/: vc141.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Release-x64/OSE/OSE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OSE.lastbuildstate
